<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_add_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_5"
    android:paddingVertical="@dimen/padding_20">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rate_this_dish"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_18" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10"
        android:numStars="5"
        android:progressTint="@color/star"
        android:rating="5"
        android:stepSize="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/TitleFont"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:background="@drawable/btn_orange_alt"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/button_orange"
            android:textSize="@dimen/text_18" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/TitleFont"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:background="@drawable/btn_orange"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

</LinearLayout>
