<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_15"
            android:layout_marginVertical="@dimen/margin_10"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/my_reviews_res_img"
                android:layout_width="@dimen/dish_ava_size"
                android:layout_height="@dimen/dish_ava_size"
                android:background="@drawable/sample_ava"
                android:contentDescription="@string/dish_ava"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/margin_8"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/my_reviews_res_name"
                    style="@style/TitleFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_5"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/desc_title"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/my_reviews_time"
                    style="@style/TextFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="1h"
                    android:textSize="@dimen/text_12"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <TextView
                android:id="@+id/my_reviews_content"
                style="@style/TextFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/description"
                android:textSize="@dimen/text_14" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>